--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular2-chartjs": "^0.5.1",
+    "chart.js": "^4.2.1",
+    "chart.js-plugin-labels-dv": "^4.0.0",
+    "chartjs": "^0.3.24",
+    "chartjs-plugin-annotation": "^2.2.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "ng2-charts": "^4.1.1",
+    "primeng": "^15.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
